--- a/package.json
+++ b/package.json
@@ -59,12 +59,17 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.13.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-modal": "^1.7.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-logger": "^2.8.2",
+    "redux-promise": "^0.5.3",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0"
   }
 }
