--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "eslint": "^2.13.1",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.2.2",
     "express": "^4.13.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
