--- a/package.json
+++ b/package.json
@@ -66,12 +66,15 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "express": "^4.13.4",
+    "lodash": "^4.17.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-modal": "^1.7.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.5.2",
+    "redux-form": "^6.5.0",
+    "redux-forms": "^0.9.2",
     "redux-logger": "^2.8.2",
     "redux-promise": "^0.5.3",
     "redux-promise-middleware": "^4.2.0",
