--- a/package.json
+++ b/package.json
@@ -72,12 +72,14 @@
     "react-modal": "^1.7.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-slick": "^0.14.7",
     "redux": "^3.5.2",
     "redux-form": "^6.5.0",
     "redux-forms": "^0.9.2",
     "redux-logger": "^2.8.2",
     "redux-promise": "^0.5.3",
     "redux-promise-middleware": "^4.2.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "slick-carousel": "^1.6.0"
   }
 }
